--- a/src/css/assessment.css
+++ b/src/css/assessment.css
@@ -1,34 +1,71 @@
-:root {
-  --button-bgcolor: hsl(25, 97%, 53%);
-  --title-color: hsl(0, 100%, 100%);
-  --paragraph-color: hsl(217, 12%, 63%);
-  --card-bgcolor: hsl(213, 19%, 18%);
-  --body-bg-color: hsl(216, 12%, 8%);
+
+.assessment .icon {
+  box-sizing: content-box;
+  text-align: center;
+  height: 1.8rem;
+  width: 1.8rem;
+  padding: 1.5rem;
+  background-color: var(--icon-bgcolor);
+  border-radius: 100%;
+  margin-bottom: 3.6rem;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.assessment .info h2 {
+  font-size: 2.8rem;
+  color: var(--title-color);
+  letter-spacing: -0.02rem;
+  margin-bottom: 1.1rem;
 }
 
-img {
-  width: 100%;
+.assessment .info p {
+  font-size: 1.5rem;
+  line-height: 2.3rem;
+  margin-bottom: 2.2rem;
 }
 
-.result {
-  display: none;
-}
-
-body {
-  min-height: 100vh;
-  width: 100vw;
+.assessment .numbers {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 2.2rem;
+}
+
+.assessment .numbers span {
+  display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  height: 2rem;
+  width: 2rem;
+  font-weight: 700;
+  background-color: var(--icon-bgcolor);
+  border-radius: 100%;
+  transition: 0.3s ease-in-out;
 }
 
-.card{
-    width: 500px;
+.assessment .button {
+  margin-top: 3.5rem;
+  width: 100%;
+  height: 4.5rem;
+  border-radius: 30px;
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  color: var(--body-bgcolor);
+  background-color: var(--button-bgcolor);
+  transition: 0.3s ease-in-out;
+}
+
+.assessment .numbers span:hover {
+  background-color: var(--button-bgcolor);
+  color: var(--body-bgcolor);
+  cursor: pointer;
+}
+
+.assessment .button:hover {
+  background-color: var(--title-color);
 }
