--- a/src/css/assessment.css
+++ b/src/css/assessment.css
@@ -1,4 +1,3 @@
-
 .assessment .icon {
   box-sizing: content-box;
   text-align: center;
@@ -43,7 +42,7 @@
   transition: 0.3s ease-in-out;
 }
 
-.assessment .button {
+.assessment #button {
   margin-top: 3.5rem;
   width: 100%;
   height: 4.5rem;
@@ -66,6 +65,6 @@
   cursor: pointer;
 }
 
-.assessment .button:hover {
+.assessment #button:hover {
   background-color: var(--title-color);
 }
