--- a/src/css/result.css
+++ b/src/css/result.css
@@ -1,17 +1,23 @@
-.result .image{
+.result {
+    position: relative;
+}
+
+.result .image {
     padding-top: 1.2rem;
     padding-left: 8.5rem;
 }
-.result .image img{
+
+.result .image img {
     height: 11rem;
     width: auto;
-} 
+}
 
-.result .range{
+.result .range {
     text-align: center;
     margin: 3.5rem;
 }
-.result .range p{
+
+.result .range p {
     display: inline;
     background-color: var(--icon-bgcolor);
     color: var(--button-bgcolor);
@@ -21,18 +27,37 @@
     border-radius: 15px;
 }
 
-.result .info-result{
+.result .info-result {
     text-align: center;
     margin-top: 4.3rem;
 }
 
-.result .info-result h2{
+.result .info-result h2 {
     color: var(--title-color);
     font-size: 2.75rem;
     margin-bottom: 1.2rem;
 }
 
-.result .info-result p{
-  font-size: 1.5rem;
-  line-height: 2.3rem;
+.result .info-result p {
+    font-size: 1.5rem;
+    line-height: 2.3rem;
+}
+
+#back {
+    background-color: var(--icon-bgcolor);
+    color: var(--button-bgcolor);
+    position: absolute;
+    top: 0;
+    left: -1.5rem;
+    font-size: 2rem;
+    padding: 0.7rem 2rem;
+    padding-top: 0.8rem;
+    border-radius: 15px;
+    transition: 0.3s ease-in-out;
+}
+
+#back:hover {
+    cursor: pointer;
+    background-color: var(--button-bgcolor);
+    color: var(--body-bgcolor);
 }
